# mobile_dual_manipulator

./: README.md
devel/: local_setup.sh  setup.sh
devel/include/dxl_gripper/: GripperDist.h  GripperDistRequest.h  GripperDistResponse.h
devel/include/ethercat_test/: pos.h  trajectory.h  vel.h
devel/include/mobile_platform_description/: JointState.h
devel/include/mservo_msg/: joint_data.h  joint_queue.h  traj_1d.h  traj_2d.h
devel/lib/pkgconfig/: dual_arm_description.pc  dualarm_config.pc  dualarm_moveit.pc  dxl_gripper.pc  ethercat_test.pc  mobile_platform_description.pc  move_robot.pc  mservo_msg.pc  my_dual_arm.pc  new.pc  velodyne_description.pc  velodyne_gazebo_plugins.pc
devel/share/dual_arm_description/cmake/: dual_arm_descriptionConfig.cmake
devel/share/dualarm_config/cmake/: dualarm_configConfig.cmake
devel/share/dualarm_moveit/cmake/: dualarm_moveitConfig.cmake
devel/share/dxl_gripper/cmake/: dxl_gripper-msg-extras.cmake  dxl_gripper-msg-paths.cmake  (+1 more)
src/mobile_platform_descpription/: CMakeLists.txt  package.xml
src/mobile_platform_descpription/launch/: X_main.launch  X_model.launch  display.launch  gazebo_v1.launch  gazebo_v2.launch  robot.config.rviz
src/mobile_platform_descpription/meshes/: base_link.STL  bl_wheel_link.STL  br_wheel_link.STL  fl_wheel_link.STL  fr_wheel_link.STL
src/mobile_platform_descpription/urdf/: common_properties.urdf.xacro  mobile_platform_description_v1.xacro  mobile_platform_v1.gazebo
src/mobile_platform_descpription/worlds/: vehicle.world
src/mservo_manipulator_control-main/: README.md
src/mservo_manipulator_control-main/dualarm_config/: CMakeLists.txt  package.xml
src/mservo_manipulator_control-main/dualarm_config/meshes/: base.STL  base_link.STL  mani1_base.STL  mani1_eef.STL  mani1_eff.STL  mani1_link1.STL  mani1_link2.STL  mani1_link3.STL  mani1_link4.STL  mani1_link5.STL  mani1_link6.STL  mani1_link7.STL  mani2_base.STL  mani2_link1.STL  mani2_link2.STL  mani2_link3.STL  mani2_link4.STL  mani2_link5.STL  mani2_link6.STL  mani2_link7.STL  mani2_link8.STL
src/mservo_manipulator_control-main/dualarm_config/urdf/: arm_1.xacro  arm_11.xacro  arm_2.xacro  arm_22.xacro  dualarm.gv  dualarm.urdf  dualarm.xacro  dualarm_before_220610.urdf  dualarm_test2.xacro  mani2_config.urdf
src/mservo_manipulator_control-main/dualarm_moveit/: CMakeLists.txt
src/mservo_manipulator_control-main/dxl_gripper/: CMakeLists.txt  README.md
src/mservo_manipulator_control-main/move_robot/: CMakeLists.txt  package.xml
src/mservo_manipulator_control-main/mservo_msg/: CMakeLists.txt  package.xml
src/my_dual_arm/: CMakeLists.txt  package.xml
src/my_dual_arm/launch/: X.launch  dualarm_bringup_gazebo.launch  gazebo_v1.launch
src/my_dual_arm/urdf/: dualarm.xacro  mobile_platform_description_v1.xacro  my_dual_arm.xacro
(+164 files in other folders)
